--- a/title_page.html
+++ b/title_page.html
@@ -18,6 +18,23 @@
 		-->		
 	</head>
 	<body>
+		<div class="header">
+			<nav>
+				<a style="text-decoration:none" href="title_page.html">Home</a>
+				<a style="text-decoration:none" href="training.html">Training</a>
+				<a style="text-decoration:none" href="equipment.html">Equipment</a>
+				<a style="text-decoration:none" href="accessibility.html">Accessibility</a>
+				<a style="text-decoration:none" href="about.html">About</a>
+			</nav>
+		</div>
+		<div class="Big-Text">
+			<h1 class="white-font">
+				ALL-AMERICAN GYM
+			</h1>
+			<h1>
+				<strong>WORK</strong> THE MIND. <strong>FREE</strong> THE SPIRIT. <strong>STRENGTHEN</strong> THE BODY.
+			</h1>
+		</div>
 		
 	</body>
 </html>
