--- a/title_page.html
+++ b/title_page.html
@@ -28,13 +28,41 @@
 			</nav>
 		</div>
 		<div class="Big-Text">
-			<h1 class="white-font">
+			<h2 class="white-font">
 				ALL-AMERICAN GYM
-			</h1>
-			<h1>
+			</h2>
+			<h2>
 				<strong>WORK</strong> THE MIND. <strong>FREE</strong> THE SPIRIT. <strong>STRENGTHEN</strong> THE BODY.
-			</h1>
+			</h2>
+			<img src="images/deadlift.jpg" alt="deadlift">
+			</div>
+		<div>
+			<p>At <strong>ALL-AMERICAN GYM</strong>, it’s our job to ensure you enjoy every moment of improving yourself. We fully understand that hurdles make the race of life difficult. We are behind our members for each step of their journey to improvement. Whether it's physical or mental improvement, we insist on being dependable and knowledgeable to get the best out of you, all within our rugged, clean and productive environment. 
+				<br><br>We offer a wide range of equipment for strength, conditioning, and functional training in a convenient location with 24-hour access. Our staff and personal trainers are highly qualified and experienced, ensuring that the moment you step inside <strong>ALL-AMERICAN GYM</strong> you only receive the best.
+				<br><br>Our goal is to provide a facility where people enjoy the process of working out rather than the outcome. We believe results come from the process, not just on testing day. We pride ourselves on being a facility with a team atmosphere where personal accomplishments are acknowledged and celebrated every day.</p>
 		</div>
-		
+		<div class="footer">
+				<footer>
+
+					<div class="column">
+						<h2 style="display: inline-block;">Menu</h2>
+						<ul style="list-style-type: none; display: inline-block;">
+							<li><h2 style="text-align: center;">Menu</h2></li>
+							<li>Home</li>
+							<li>Training</li>
+							<li>Equipment</li>
+							<li>Accessibility</li>
+							<li>About</li>
+						</ul>
+					</div>
+					
+					<div class="column">
+						<h2 style="display: inline-block">Contact Us:</h2>
+						<ul style="list-style-type: none; display: inline-block">
+							<li>Contact Us</li>
+						</ul>
+					</div>
+				</footer>
+		</div>
 	</body>
 </html>
