--- a/title_page.html
+++ b/title_page.html
@@ -19,7 +19,7 @@
 	</head>
 	<body>
 		<div class="header">
-			<div class="logo"><img src="images/AllAmerican.webp" alt="Logo"></div>
+			<div style="float: left"><img src="images/AllAmerican.webp" alt="Logo"></div>
 			
 			<nav>
 				<a style="text-decoration:none" href="title_page.html">Home</a>
