--- a/training.html
+++ b/training.html
@@ -37,26 +37,26 @@
 			<img src="images/deadlift.jpg" alt="deadlift">
 			</div>
 		<div>
-			<img src="Bench-Press.gif" alt="bench">
+			<img src="images/Bench-Press.gif" alt="bench">
             <p> This is a the <strong>Bench Press</strong>. 
                 <br></br>The workout is intended to activate the pectoral and tricep muscles depending on the grip placement. The workout can also be rearranged with either incline or decline.   
                 <br></br>Note: This activity is intended to have a spotter with you while being preformed.</p>
             </div>
         <div>
-            <img src="hang-clean.gif" alt="hangclean">
+            <img src="images/hang-clean.gif" alt="hangclean">
             <p> <strong>Hang Clean</strong>
                 <br></br>Hang clean is a core explosion workout. It is essentially a full body workout, as the weighted bar is pulled (cleaned) from the floor, and explosively pulled upwards at shoulder height as the form ends in the squat position.
                 <br></br>Note: This activity is intended to have a spotter with you while being preformed.</p>
         </div>
         <div>
-         <img src="Squat.gif" alt="squat">
+         <img src="images/Squat.gif" alt="squat">
             <p><strong>Squat</strong>
                 <br></br>Squat is a great lower body exercise. I activates the quads, hamstrings, glutes, and calves.
                 <br></br>Note: This activity is intended to be preformed with a spotter and inside the power rack.  
             </p>
         </div>
         <div>
-            <img src="Rowing.gif" alt="rowing">
+            <img src="images/Rowing.gif" alt="rowing">
             <p><strong>Row Machine</strong>
                 <br><br> Rowing is a full body cardio workout. It activates shoulders, abs, calves, biceps, lats, and quads. It is a great way to burn calories and strengthen your body.    
                 </body>
