Fixed about page
Added css files to rightful spot

--- a/title_page.html
+++ b/title_page.html
@@ -66,7 +66,8 @@
 					<div class="column">
 						<h2 style="text-align: center">Contact Us:</h2>
 						<ul style="list-style-type: none">
-							<li>Contact Us</li>
+							<li>Phone: ###-###-####</li>
+							<li>Email: email@domain.com</li>
 						</ul>
 					</div>
 					<div class="column"> 
