--- a/training.html
+++ b/training.html
@@ -36,7 +36,7 @@
 			<h2>
 				<strong>WORK</strong> THE MIND. <strong>FREE</strong> THE SPIRIT. <strong>STRENGTHEN</strong> THE BODY.
 			</h2>
-			<img src="images/deadlift.jpg" alt="deadlift">
+			<br>
 			</div>
 		<div>
 			<img src="images/Bench-Press.gif" alt="bench">
@@ -87,7 +87,8 @@
 					<div class="column">
 						<h2 style="text-align: center">Contact Us:</h2>
 						<ul style="list-style-type: none">
-							<li>Contact Us</li>
+							<li>Phone: ###-###-####</li>
+							<li>Email: email@domain.com</li>
 						</ul>
 					</div>
 					<div class="column"> 
